mot de passe oublié

--- a/assets/style.css
+++ b/assets/style.css
@@ -327,7 +327,7 @@ a:hover, .js span.change:hover, a.hovered, .editing a.edit, .btn-lnk:hover {
 	color: #ec6b5b;
 }
 
-.alert-info
+.alert-success
 {
-	color:#84EC5B;
+	color:#5A9E3F;
 }
