moteur de recherche complet

--- a/assets/style.css
+++ b/assets/style.css
@@ -259,6 +259,7 @@ input.input-text, input.input-email, input.input-password, input.input-search, .
 	box-sizing: border-box;
 	padding-right: 11px;
 	text-align: right;
+	padding-top: 8px;
 }
 .form label, .form .label {
 	display: inline-block;
@@ -345,7 +346,7 @@ a:hover, .js span.change:hover, a.hovered, .editing a.edit, .btn-lnk:hover {
 	text-decoration: none;
 	height: 100%;
 	display: block;
-	padding: 14px;
+	padding: 14px 35px;
 	margin-top: -5px;
 	color: #555;
 	float: left;
@@ -463,4 +464,8 @@ img {
 	width: 100%;
 	word-wrap: break-word;
 	padding-bottom: 10px;
+}
+.age {
+	float: right;
+	line-height: 35px;
 }
