--- a/assets/style.css
+++ b/assets/style.css
@@ -327,7 +327,8 @@ a:hover, .js span.change:hover, a.hovered, .editing a.edit, .btn-lnk:hover {
 }
 #wrap
 {
-	width: 100%;
+	width: 73%;
+	margin: auto;
 	min-width: 990px;
 	margin-top: 100px;
 }
@@ -454,10 +455,17 @@ img {
 .profile-page
 {
 	min-height: 520px;
-	width:440px;
+	width:30%;
 	margin:auto;
+	float: left;
 }
-
+ .profile-photos
+ {
+ 	min-height: 520px;
+	width:70%;
+	margin:auto;
+	float: left;
+ }
 
 .profile-page label
 {
@@ -475,4 +483,46 @@ img {
 .age {
 	float: right;
 	line-height: 35px;
+}
+
+.polaroid-images img { 
+	display: block; 
+	width: inherit; 
+}
+.polaroid-images a
+{
+	background: white;
+	display: inline;
+	float: left;
+	margin: 0 15px 30px;
+	padding: 10px 10px 25px;
+	text-align: center;
+	text-decoration: none;
+	-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+	-moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
+	box-shadow: 0 4px 6px rgba(0,0,0,.3);
+	-webkit-transition: all .15s linear;
+	-moz-transition: all .15s linear;
+	transition: all .15s linear;
+	z-index:0;
+    position:relative;
+}
+.polaroid-images a:after {
+	color: #333;
+	font-size: 20px;
+	content: attr(title);
+	position: relative;
+	top:15px;
+}
+.polaroid-images a:hover{
+	-webkit-transform: rotate(0deg); 
+	-moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+	-webkit-transform: scale(1.2); 
+	-moz-transform: scale(1.2);
+        transform: scale(1.2);
+	z-index:10;
+	-webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+	-moz-box-shadow: 0 10px 20px rgba(0,0,0,.7);
+        box-shadow: 0 10px 20px rgba(0,0,0,.7);
 }
