--- a/assets/style.css
+++ b/assets/style.css
@@ -536,3 +536,94 @@ img {
 	display: inline;
 	float: left;
 }
+#wrap.chat {
+	height: 500px;
+	border: 1px solid rgb(255, 226, 199);
+	background: white;
+	margin-top: 90px;
+}
+
+.lastConvs
+{
+	height: 100%;
+	background: white;
+	border-right: 4px double rgb(255, 232, 210);
+	width: 20%;
+	float: left;
+}
+.lastConvs ul
+{
+	overflow-y: auto;
+}
+.lastConvs li {
+	position: relative;
+	overflow: hidden;
+	height: 41px;
+	border-bottom: 1px solid #FCF1E4;
+	background: #FFFAF4;
+	color: #8B6D5E;
+}
+.lastConvs li:hover {
+	background: rgb(255, 240, 231);\
+}
+.lastConvs li a {
+	color:inherit;
+	display: inline-block;
+	overflow: hidden;
+	zoom: 1;
+	width: 185px;
+	vertical-align: middle;
+	white-space: nowrap;
+	text-decoration: none;
+	text-overflow: ellipsis;
+	font-size: 15px;
+	line-height: 38px;
+	font-weight: bold;
+	width: 89%;
+	height: 100%;
+	padding-left: 20px;
+}
+.currentConv
+{
+	float: left;
+	width: 79%;
+	height: 100%;
+}
+.currentConv .content {
+	width: 100.5%;
+	height: 85%;
+	overflow-y: auto;
+}
+.currentConv .content .msg {
+	padding: 2px 10px;
+}
+.currentConv .content .msg.mine {
+	background:rgb(255, 252, 245);
+}
+.currentConv .content .msg.notmine {
+	background:rgb(249, 245, 255);
+}
+.currentConv .content .msg-head {
+	font-size: 14px;
+	font-weight: bold;
+}
+.currentConv .content .msg-content {
+	padding-bottom: 5px;
+}
+.currentConv .postzone {
+	border-top: 4px double rgb(255, 232, 210);
+	width: 100%;
+	height: 20%;
+	position: relative;
+	width: 100%;
+}
+.currentConv .postzone form {
+	right: 0px;
+	top: 4px;
+	position: absolute;
+	width: 99%;
+}
+.currentConv .postzone textarea {
+	width: 85%;
+	height: 50px;
+}
